tests/invalid/classes/03_method_wrong_arity.cps
class A { function ping(): integer { return 1; } }
let a: A = new A();
let z = a.ping(1);   // aridad inválida E021
